# Open-Text-Summarizer

./: .gitignore  AUTHORS  BUGS  ChangeLog  HACKING  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.in  libots-1.pc.in  ots-config.h.in  ots.spec  ots.spec.in
articles/: Makefile.am  Makefile.in  art.hebrew.txt  guardian1.txt  gulag.txt  letter.txt  linus1.txt  ori.hebrew.txt  sacbee1.txt  sacbee2.txt  washingtonpost1.txt  washingtonpost2.txt  ynet.hebrew.txt
dic/: Makefile.am  Makefile.in  bg.xml  ca.xml  cs.xml  cy.xml  da.xml  de.xml  el.xml  en.xml  eo.xml  es.xml  et.xml  eu.xml  fi.xml  fr.xml  ga.xml  gl.xml  he.xml  hu.xml  ia.xml  id.xml  is.xml  it.xml  lv.xml  mi.xml  ms.xml  mt.xml  nl.xml  nn.xml  pl.xml  pt.xml  ro.xml  ru.xml  sv.xml  tl.xml  tr.xml  uk.xml  yi.xml
doc/: Makefile.am  Makefile.in  ots-docs.sgml  ots-sections.txt
src/: Makefile.am  Makefile.in  article.c  dictionary.c  grader-tc.c  grader-tc.h  grader-tf.c  grader.c  highlighter.c  html.c  libots.h  ots.c  parser.c  relations.c  stemmer.c  text.c  wordlist.c
