DICTS=bg.xml ca.xml cs.xml cy.xml da.xml de.xml el.xml en.xml eo.xml es.xml \
      et.xml eu.xml fi.xml fr.xml ga.xml gl.xml he.xml hu.xml ia.xml id.xml \
      is.xml it.xml lv.xml mi.xml ms.xml mt.xml nl.xml nn.xml pl.xml pt.xml \
      ro.xml ru.xml sv.xml tl.xml tr.xml uk.xml yi.xml en.xml

pkgdata_DATA = $(DICTS)

EXTRA_DIST = $(DICTS)
